@@ -4,19 +4,31 @@ import com.axonivy.market.BaseSetup;
 import com.axonivy.market.constants.GitHubConstants;
 import com.axonivy.market.criteria.ProductSearchCriteria;
 import com.axonivy.market.entity.GitHubRepoMeta;
+import com.axonivy.market.entity.MavenArtifactVersion;
 import com.axonivy.market.entity.Product;
 import com.axonivy.market.entity.ProductCustomSort;
 import com.axonivy.market.entity.ProductModuleContent;
-import com.axonivy.market.enums.*;
+import com.axonivy.market.enums.ErrorCode;
+import com.axonivy.market.enums.FileStatus;
+import com.axonivy.market.enums.FileType;
+import com.axonivy.market.enums.Language;
+import com.axonivy.market.enums.SortOption;
+import com.axonivy.market.enums.TypeOption;
 import com.axonivy.market.exceptions.model.InvalidParamException;
 import com.axonivy.market.github.model.GitHubFile;
 import com.axonivy.market.github.service.GHAxonIvyMarketRepoService;
 import com.axonivy.market.github.service.GHAxonIvyProductRepoService;
 import com.axonivy.market.github.service.GitHubService;
 import com.axonivy.market.model.ProductCustomSortRequest;
-import com.axonivy.market.repository.*;
+import com.axonivy.market.repository.GitHubRepoMetaRepository;
+import com.axonivy.market.repository.ImageRepository;
+import com.axonivy.market.repository.MavenArtifactVersionRepository;
+import com.axonivy.market.repository.ProductCustomSortRepository;
+import com.axonivy.market.repository.ProductModuleContentRepository;
+import com.axonivy.market.repository.ProductRepository;
 import com.axonivy.market.service.ImageService;
-import org.apache.commons.lang3.ObjectUtils;
+import com.axonivy.market.util.MavenUtils;
+import com.axonivy.market.util.VersionUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -24,17 +36,35 @@ import org.kohsuke.github.GHCommit;
 import org.kohsuke.github.GHContent;
 import org.kohsuke.github.GHRepository;
 import org.kohsuke.github.GHTag;
-import org.mockito.*;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockedStatic;
+import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.data.mongodb.core.query.Update;
 import org.springframework.test.util.ReflectionTestUtils;
 
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.UUID;
 
 import static com.axonivy.market.constants.CommonConstants.SLASH;
 import static com.axonivy.market.constants.MetaConstants.META_FILE;
@@ -55,7 +85,6 @@ class ProductServiceImplTest extends BaseSetup {
   private static final String SHA1_SAMPLE = "35baa89091b2452b77705da227f1a964ecabc6c8";
   private static final String INSTALLATION_FILE_PATH = "src/test/resources/installationCount.json";
   private static final String EMPTY_SOURCE_URL_META_JSON_FILE = "/emptySourceUrlMeta.json";
-  private static final String AMAZON_COMPREHEND_ID = "amazon-comprehend";
   @Captor
   ArgumentCaptor<Product> argumentCaptor = ArgumentCaptor.forClass(Product.class);
   @Captor
@@ -83,14 +112,18 @@ class ProductServiceImplTest extends BaseSetup {
   private GitHubRepoMetaRepository repoMetaRepository;
   @Mock
   private GitHubService gitHubService;
+
   @Mock
   private ImageRepository imageRepository;
+
   @Mock
   private ProductCustomSortRepository productCustomSortRepository;
   @Mock
   private GHAxonIvyProductRepoService ghAxonIvyProductRepoService;
   @Mock
   private ImageService imageService;
+  @Mock
+  private MavenArtifactVersionRepository mavenArtifactVersionRepo;
   @InjectMocks
   private ProductServiceImpl productService;
 
@@ -120,7 +153,7 @@ class ProductServiceImplTest extends BaseSetup {
     Product product = new Product();
     product.setSynchronizedInstallationCount(null);
     product.setId("portal");
-    mockLegacyInstallationCountPath();
+    ReflectionTestUtils.setField(productService, "legacyInstallationCountPath", INSTALLATION_FILE_PATH);
 
     productService.syncInstallationCountWithProduct(product);
 
@@ -130,19 +163,14 @@ class ProductServiceImplTest extends BaseSetup {
 
   @Test
   void testSyncInstallationCountWithProduct() {
-    mockLegacyInstallationCountPath();
+    ReflectionTestUtils.setField(productService, "legacyInstallationCountPath", INSTALLATION_FILE_PATH);
     Product product = mockProduct();
     product.setSynchronizedInstallationCount(false);
 
     productService.syncInstallationCountWithProduct(product);
 
     assertEquals(40, product.getInstallationCount());
-    assertEquals(true, product.getSynchronizedInstallationCount());
     assertTrue(product.getSynchronizedInstallationCount());
-  }
-
-  private void mockLegacyInstallationCountPath() {
-    ReflectionTestUtils.setField(productService, "legacyInstallationCountPath", INSTALLATION_FILE_PATH);
   }
 
   private Product mockProduct() {
@@ -192,11 +220,13 @@ class ProductServiceImplTest extends BaseSetup {
     when(marketRepoService.fetchMarketItemsBySHA1Range(any(), any())).thenReturn(List.of(mockGithubFile));
     var mockGHContent = mockGHContentAsMetaJSON();
     when(gitHubService.getGHContent(any(), anyString(), any())).thenReturn(mockGHContent);
-    mockSavedProductResult();
+    when(mockGHContent.read()).thenReturn(this.getClass().getResourceAsStream(EMPTY_SOURCE_URL_META_JSON_FILE));
+    when(productRepository.save(any(Product.class))).thenReturn(new Product());
 
     // Executes
     var result = productService.syncLatestDataFromMarketRepo();
-    assertFalse(ObjectUtils.isEmpty(result));
+    assertNotNull(result);
+    assertTrue(result.isEmpty());
 
     // Start testing by deleting new meta
     mockCommit = mockGHCommitHasSHA1(UUID.randomUUID().toString());
@@ -205,11 +235,8 @@ class ProductServiceImplTest extends BaseSetup {
     mockGithubFile.setStatus(FileStatus.REMOVED);
     // Executes
     result = productService.syncLatestDataFromMarketRepo();
-    assertFalse(ObjectUtils.isEmpty(result));
-  }
-
-  private void mockSavedProductResult() {
-    when(productRepository.save(any())).thenReturn(mockProduct());
+    assertNotNull(result);
+    assertTrue(result.isEmpty());
   }
 
   @Test
@@ -230,7 +257,8 @@ class ProductServiceImplTest extends BaseSetup {
 
     // Executes
     var result = productService.syncLatestDataFromMarketRepo();
-    assertFalse(ObjectUtils.isEmpty(result));
+    assertNotNull(result);
+    assertTrue(result.isEmpty());
 
     // Start testing by deleting new logo
     when(mockCommit.getSHA1()).thenReturn(UUID.randomUUID().toString());
@@ -239,7 +267,8 @@ class ProductServiceImplTest extends BaseSetup {
 
     // Executes
     result = productService.syncLatestDataFromMarketRepo();
-    assertFalse(ObjectUtils.isEmpty(result));
+    assertNotNull(result);
+    assertTrue(result.isEmpty());
   }
 
   @Test
@@ -303,9 +332,9 @@ class ProductServiceImplTest extends BaseSetup {
     when(marketRepoService.fetchAllMarketItems()).thenReturn(mockGHContentMap);
     when(productModuleContentRepository.saveAll(anyList())).thenReturn(List.of(mockReadmeProductContent()));
 
-    Mockito.when(imageService.mappingImageFromGHContent(any(), any(), anyBoolean()))
+    when(imageService.mappingImageFromGHContent(any(), any(), anyBoolean()))
         .thenReturn(GHAxonIvyProductRepoServiceImplTest.mockImage());
-    mockSavedProductResult();
+    when(productRepository.save(any(Product.class))).thenReturn(new Product());
     // Executes
     productService.syncLatestDataFromMarketRepo();
     verify(productModuleContentRepository).saveAll(argumentCaptorProductModuleContents.capture());
@@ -332,9 +361,9 @@ class ProductServiceImplTest extends BaseSetup {
     List<GHContent> mockMetaJsonAndLogoList = new ArrayList<>(List.of(mockContent, mockContentLogo));
     mockGHContentMap.put(SAMPLE_PRODUCT_ID, mockMetaJsonAndLogoList);
     when(marketRepoService.fetchAllMarketItems()).thenReturn(mockGHContentMap);
-    Mockito.when(imageService.mappingImageFromGHContent(any(), any(), anyBoolean())).thenReturn(
+    when(imageService.mappingImageFromGHContent(any(), any(), anyBoolean())).thenReturn(
         GHAxonIvyProductRepoServiceImplTest.mockImage());
-    mockSavedProductResult();
+    when(productRepository.save(any(Product.class))).thenReturn(new Product());
     // Executes
     productService.syncLatestDataFromMarketRepo();
     verify(productModuleContentRepository).save(argumentCaptorProductModuleContent.capture());
@@ -390,7 +419,8 @@ class ProductServiceImplTest extends BaseSetup {
 
     // Executes
     var result = productService.syncLatestDataFromMarketRepo();
-    assertTrue(ObjectUtils.isEmpty(result));
+    assertNotNull(result);
+    assertTrue(result.isEmpty());
   }
 
   @Test
@@ -402,7 +432,7 @@ class ProductServiceImplTest extends BaseSetup {
     Map<String, List<GHContent>> mockGHContentMap = new HashMap<>();
     mockGHContentMap.put(SAMPLE_PRODUCT_ID, new ArrayList<>());
     when(marketRepoService.fetchAllMarketItems()).thenReturn(mockGHContentMap);
-    mockSavedProductResult();
+    when(productRepository.save(any(Product.class))).thenReturn(new Product());
 
     // Executes
     productService.syncLatestDataFromMarketRepo();
@@ -427,32 +457,56 @@ class ProductServiceImplTest extends BaseSetup {
 
   @Test
   void testFetchProductDetail() {
+    String id = "amazon-comprehend";
     Product mockProduct = mockResultReturn.getContent().get(0);
     mockProduct.setSynchronizedInstallationCount(true);
-    when(productRepository.getProductById(AMAZON_COMPREHEND_ID)).thenReturn(mockProduct);
-    Product result = productService.fetchProductDetail(AMAZON_COMPREHEND_ID);
+    when(productRepository.getProductById(id)).thenReturn(mockProduct);
+    Product result = productService.fetchProductDetail(id);
     assertEquals(mockProduct, result);
-    verify(productRepository, times(1)).getProductById(AMAZON_COMPREHEND_ID);
+    verify(productRepository).getProductById(id);
   }
 
   @Test
   void testFetchProductDetailByIdAndVersion() {
+    String id = "amazon-comprehend";
+    String version = "10.0.2";
+
     Product mockProduct = mockResultReturn.getContent().get(0);
-    when(productRepository.getProductByIdAndTag(AMAZON_COMPREHEND_ID, RELEASE_TAG)).thenReturn(mockProduct);
-    Product result = productService.fetchProductDetailByIdAndVersion(AMAZON_COMPREHEND_ID, "10.0.2");
+    when(productRepository.getProductByIdWithTagOrVersion(id, version)).thenReturn(mockProduct);
+
+    Product result = productService.fetchProductDetailByIdAndVersion(id, version);
+
     assertEquals(mockProduct, result);
-    verify(productRepository, times(1)).getProductByIdAndTag(AMAZON_COMPREHEND_ID, RELEASE_TAG);
+    verify(productRepository).getProductByIdWithTagOrVersion(id, version);
   }
 
   @Test
   void testFetchBestMatchProductDetailByIdAndVersion() {
-    Product mockProduct = mockResultReturn.getContent().get(0);
-    mockProduct.setSynchronizedInstallationCount(true);
-    when(productRepository.getReleasedVersionsById(AMAZON_COMPREHEND_ID)).thenReturn(List.of("10.0.2", "10.0.1"));
-    when(productRepository.getProductByIdAndTag(AMAZON_COMPREHEND_ID, RELEASE_TAG)).thenReturn(mockProduct);
-    Product result = productService.fetchBestMatchProductDetail(AMAZON_COMPREHEND_ID, "10.0.2");
-    assertEquals(mockProduct, result);
-    verify(productRepository, times(1)).getProductByIdAndTag(AMAZON_COMPREHEND_ID, RELEASE_TAG);
+    String id = "amazon-comprehend";
+    String version = "v10.0.2";
+    String bestMatchVersion = "10.0.2";
+
+    MavenArtifactVersion mockMavenArtifactVersion = new MavenArtifactVersion();
+    mockMavenArtifactVersion.getProductArtifactsByVersion().put(bestMatchVersion, Collections.emptyList());
+
+    List<String> mockVersions = Arrays.asList("10.0.1", "10.0.2");
+    when(mavenArtifactVersionRepo.findById(id)).thenReturn(Optional.of(mockMavenArtifactVersion));
+    try (MockedStatic<VersionUtils> mockVersionUtils = Mockito.mockStatic(VersionUtils.class)) {
+      when(MavenUtils.getAllExistingVersions(mockMavenArtifactVersion, true, null)).thenReturn(mockVersions);
+      mockVersionUtils.when(() -> VersionUtils.getBestMatchVersion(mockVersions, version)).thenReturn(bestMatchVersion);
+      mockVersionUtils.when(() -> VersionUtils.convertVersionToTag(id, bestMatchVersion)).thenReturn(version);
+
+      Product mockProduct = new Product();
+      mockProduct.setSynchronizedInstallationCount(true);
+      when(productRepository.getProductByIdWithTagOrVersion(id, version)).thenReturn(mockProduct);
+
+      Product result = productService.fetchBestMatchProductDetail(id, version);
+
+      assertEquals(mockProduct, result);
+      assertEquals(bestMatchVersion, result.getBestMatchVersion());
+      verify(mavenArtifactVersionRepo).findById(id);
+      verify(productRepository).getProductByIdWithTagOrVersion(id, version);
+    }
   }
 
   @Test
@@ -513,10 +567,10 @@ class ProductServiceImplTest extends BaseSetup {
 
     productService.addCustomSortProduct(customSortRequest);
 
-    verify(productCustomSortRepository, times(1)).deleteAll();
-    verify(mongoTemplate, times(1)).updateMulti(any(Query.class), any(Update.class), eq(Product.class));
-    verify(productCustomSortRepository, times(1)).save(any(ProductCustomSort.class));
-    verify(productRepository, times(1)).saveAll(productListArgumentCaptor.capture());
+    verify(productCustomSortRepository).deleteAll();
+    verify(mongoTemplate).updateMulti(any(Query.class), any(Update.class), eq(Product.class));
+    verify(productCustomSortRepository).save(any(ProductCustomSort.class));
+    verify(productRepository).saveAll(productListArgumentCaptor.capture());
 
     List<Product> capturedProducts = productListArgumentCaptor.getValue();
     assertEquals(1, capturedProducts.size());
@@ -528,7 +582,7 @@ class ProductServiceImplTest extends BaseSetup {
     Product product = mockProduct();
     product.setSynchronizedInstallationCount(false);
     String id = product.getId();
-    mockLegacyInstallationCountPath();
+    ReflectionTestUtils.setField(productService, "legacyInstallationCountPath", INSTALLATION_FILE_PATH);
 
     when(productRepository.updateInitialCount(eq(id), anyInt())).thenReturn(10);
 
@@ -592,8 +646,7 @@ class ProductServiceImplTest extends BaseSetup {
   }
 
   private List<Product> mockProducts() {
-    Product product1 = Product.builder().id("amazon-comprehend-connector").repositoryName(
-            "axonivy-market/amazon-comprehend-connector")
+    Product product1 = Product.builder().id("amazon-comprehend-connector").repositoryName("axonivy-market/amazon-comprehend-connector")
         .productModuleContent(mockReadmeProductContent()).build();
     return List.of(product1);
   }
@@ -611,12 +664,13 @@ class ProductServiceImplTest extends BaseSetup {
     mockGitHubFile.setType(FileType.LOGO);
     mockGitHubFile.setStatus(FileStatus.ADDED);
     when(marketRepoService.fetchMarketItemsBySHA1Range(any(), any())).thenReturn(List.of(mockGitHubFile));
-    var mockGHContent = mockGHContentAsMetaJSON();
+    var mockGHContent = mockGHContentAsLogo();
     when(gitHubService.getGHContent(any(), anyString(), any())).thenReturn(mockGHContent);
 
     // Executes
     var result = productService.syncLatestDataFromMarketRepo();
-    assertFalse(ObjectUtils.isEmpty(result));
+    assertNotNull(result);
+    assertTrue(result.isEmpty());
 
     // Start testing by deleting new logo
     when(mockCommit.getSHA1()).thenReturn(UUID.randomUUID().toString());
@@ -630,7 +684,8 @@ class ProductServiceImplTest extends BaseSetup {
     verify(productRepository, times(1)).deleteById(anyString());
     verify(imageRepository, times(1)).deleteAllByProductId(anyString());
     verify(imageRepository, times(1)).findByImageUrlEndsWithIgnoreCase(anyString());
-    assertFalse(ObjectUtils.isEmpty(result));
+    assertNotNull(result);
+    assertFalse(result.isEmpty());
   }
 
   @Test
@@ -651,7 +706,8 @@ class ProductServiceImplTest extends BaseSetup {
     // Executes
     var result = productService.syncLatestDataFromMarketRepo();
 
-    assertFalse(ObjectUtils.isEmpty(result));
+    assertNotNull(result);
+    assertFalse(result.isEmpty());
     verify(productRepository, times(1)).deleteById(anyString());
     verify(imageRepository, times(1)).deleteAllByProductId(anyString());
   }
