@@ -1,18 +1,23 @@
 package com.axonivy.market.service.impl;
 
-import com.axonivy.market.entity.MavenArtifactModel;
+import com.axonivy.market.BaseSetup;
+import com.axonivy.market.bo.ArchivedArtifact;
+import com.axonivy.market.bo.Artifact;
+import com.axonivy.market.constants.MavenConstants;
 import com.axonivy.market.entity.MavenArtifactVersion;
 import com.axonivy.market.entity.Product;
 import com.axonivy.market.entity.ProductJsonContent;
-import com.axonivy.market.github.model.MavenArtifact;
 import com.axonivy.market.github.service.GHAxonIvyProductRepoService;
+import com.axonivy.market.model.MavenArtifactModel;
 import com.axonivy.market.model.VersionAndUrlModel;
 import com.axonivy.market.repository.MavenArtifactVersionRepository;
 import com.axonivy.market.repository.ProductJsonContentRepository;
 import com.axonivy.market.repository.ProductModuleContentRepository;
 import com.axonivy.market.repository.ProductRepository;
+import com.axonivy.market.util.MavenUtils;
+import org.apache.commons.lang3.ObjectUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -20,19 +25,20 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.util.CollectionUtils;
 
-import java.io.IOException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-class VersionServiceImplTest {
-
-  private List<MavenArtifact> artifactsFromMeta;
-  private MavenArtifact metaProductArtifact;
+class VersionServiceImplTest extends BaseSetup {
   @Spy
   @InjectMocks
   private VersionServiceImpl versionService;
@@ -52,171 +58,125 @@ class VersionServiceImplTest {
   @Mock
   private ProductModuleContentRepository productModuleContentRepository;
 
-  @BeforeEach()
-  void prepareBeforeTest() {
-    artifactsFromMeta = new ArrayList<>();
-    metaProductArtifact = new MavenArtifact();
-  }
-
-  void setUpArtifactFromMeta() {
-    String repoUrl = "https://maven.axonivy.com";
-    String groupId = "com.axonivy.connector.adobe.acrobat.sign";
-    String artifactId = "adobe-acrobat-sign-connector";
-    metaProductArtifact.setGroupId(groupId);
-    metaProductArtifact.setArtifactId(artifactId);
-    metaProductArtifact.setIsProductArtifact(true);
-    MavenArtifact additionalMavenArtifact = new MavenArtifact(repoUrl, "", groupId, artifactId, "", null, null, null,
-        false);
-    artifactsFromMeta.add(metaProductArtifact);
-    artifactsFromMeta.add(additionalMavenArtifact);
-  }
-
   @Test
   void testGetArtifactsAndVersionToDisplay() {
-    String productId = "adobe-acrobat-sign-connector";
-    String targetVersion = "10.0.10";
-    setUpArtifactFromMeta();
-    when(versionService.getArtifactsFromMeta(Mockito.anyString())).thenReturn(artifactsFromMeta);
-    when(productModuleContentRepository.findTagsByProductId(productId)).thenReturn(List.of("v10.0.10"));
     when(mavenArtifactVersionRepository.findById(Mockito.anyString())).thenReturn(Optional.empty());
-    ArrayList<MavenArtifactModel> artifactsInVersion = new ArrayList<>();
-    artifactsInVersion.add(new MavenArtifactModel());
-    when(versionService.convertArtifactsToModels(Mockito.anyList(), Mockito.anyString())).thenReturn(
-        artifactsInVersion);
-    Assertions.assertEquals(1, versionService.getArtifactsAndVersionToDisplay(productId, false, targetVersion).size());
-
-    MavenArtifactVersion proceededData = new MavenArtifactVersion();
-    proceededData.getProductArtifactWithVersionReleased().put(targetVersion, new ArrayList<>());
+    when(mavenArtifactVersionRepository.findById(MOCK_PRODUCT_ID)).thenReturn(
+        Optional.ofNullable(MavenArtifactVersion.builder().productId(MOCK_PRODUCT_ID).productArtifactsByVersion(
+            new HashMap<>()).additionalArtifactsByVersion(new HashMap<>()).build()));
+    Assertions.assertTrue(CollectionUtils.isEmpty(
+        versionService.getArtifactsAndVersionToDisplay(MOCK_PRODUCT_ID, false, MOCK_RELEASED_VERSION)));
+    MavenArtifactVersion proceededData =
+        MavenArtifactVersion.builder().productArtifactsByVersion(new HashMap<>()).additionalArtifactsByVersion(
+            new HashMap<>()).build();
+    proceededData.getProductArtifactsByVersion().put(MOCK_RELEASED_VERSION, new ArrayList<>());
+    proceededData.getAdditionalArtifactsByVersion().put(MOCK_RELEASED_VERSION, new ArrayList<>());
+    MavenArtifactModel mockModel = new MavenArtifactModel();
+    mockModel.setName(MOCK_PRODUCT_ID);
+    mockModel.setDownloadUrl(MavenConstants.DEFAULT_IVY_MAVEN_BASE_URL);
+    proceededData.getAdditionalArtifactsByVersion().put(MOCK_RELEASED_VERSION, List.of(mockModel));
     when(mavenArtifactVersionRepository.findById(Mockito.anyString())).thenReturn(Optional.of(proceededData));
-    Assertions.assertEquals(1, versionService.getArtifactsAndVersionToDisplay(productId, false, targetVersion).size());
+    Assertions.assertTrue(ObjectUtils.isNotEmpty(
+        versionService.getArtifactsAndVersionToDisplay(MOCK_PRODUCT_ID, false, MOCK_RELEASED_VERSION)));
   }
 
+
   @Test
-  void testGetArtifactsFromMeta() {
-    Product product = new Product();
-    MavenArtifact artifact1 = new MavenArtifact();
-    MavenArtifact artifact2 = new MavenArtifact();
-    List<MavenArtifact> artifacts = List.of(artifact1, artifact2);
-    product.setArtifacts(artifacts);
-    when(productRepository.findById(Mockito.anyString())).thenReturn(Optional.of(product));
-    List<MavenArtifact> result = versionService.getArtifactsFromMeta("portal");
-    Assertions.assertEquals(artifacts, result);
+  void testGetMavenArtifactsFromProductJsonByVersion() {
+    when(productJsonContentRepository.findByProductIdAndVersion(MOCK_PRODUCT_ID, MOCK_RELEASED_VERSION)).thenReturn(
+        Collections.emptyList());
+    List<Artifact> results = versionService.getMavenArtifactsFromProductJsonByTag(MOCK_RELEASED_VERSION,
+        MOCK_PRODUCT_ID);
+    Assertions.assertTrue(CollectionUtils.isEmpty(results));
+    when(productJsonContentRepository.findByProductIdAndVersion(MOCK_PRODUCT_ID, MOCK_RELEASED_VERSION)).thenReturn(
+        List.of(getMockProductJsonContent()));
+    results = versionService.getMavenArtifactsFromProductJsonByTag(MOCK_RELEASED_VERSION, MOCK_PRODUCT_ID);
+    Assertions.assertEquals(2, results.size());
   }
 
-  @Test
-  void testGetMavenArtifactsFromProductJsonByVersion() throws IOException {
-    when(productJsonContentRepository.findByProductIdAndVersion("adobe-acrobat-connector", "10.0.20")).thenReturn(null);
-
-    Assertions.assertEquals(0,
-        versionService.getMavenArtifactsFromProductJsonByVersion("10.0.20", "adobe-acrobat-connector").size());
-
-    String jsonContent = "{ \"installers\": [{ \"id\": \"maven-import\", \"data\": { \"repositories\": [{ \"url\": " +
-        "\"http://repo.url\" }], \"projects\": [], \"dependencies\": [] } }] }";
-    ProductJsonContent productJson = new ProductJsonContent();
-    productJson.setContent(jsonContent);
-    when(productJsonContentRepository.findByProductIdAndVersion("adobe-acrobat-connector", "10.0.20")).thenReturn(
-        productJson);
-
-    List<MavenArtifact> expectedArtifacts = new ArrayList<>();
-    when(gitHubService.extractMavenArtifactsFromContentStream(Mockito.any())).thenReturn(expectedArtifacts);
-
-    List<MavenArtifact> actualArtifacts = versionService.getMavenArtifactsFromProductJsonByVersion("10.0.20",
-        "adobe-acrobat-connector");
-
-    Assertions.assertEquals(expectedArtifacts, actualArtifacts);
-    verify(productJsonContentRepository, Mockito.times(2)).findByProductIdAndVersion("adobe-acrobat-connector",
-        "10.0.20");
-    verify(gitHubService).extractMavenArtifactsFromContentStream(Mockito.any());
-
-  }
 
   @Test
-  void testConvertArtifactsToModels() {
-    // Assert case param is empty
-    List<MavenArtifactModel> result = versionService.convertArtifactsToModels(Collections.emptyList(), "10.0.21");
-    Assertions.assertEquals(Collections.emptyList(), result);
-
-    // Assert case param is null
-    result = versionService.convertArtifactsToModels(null, "10.0.21");
-    Assertions.assertEquals(Collections.emptyList(), result);
-
-    // Assert case param is a list with existed element
-    MavenArtifact targetArtifact = new MavenArtifact(null, null, "com.axonivy.connector.adobe.acrobat.sign",
-        "adobe-acrobat-sign-connector", null, null, null, null, false);
-    result = versionService.convertArtifactsToModels(List.of(targetArtifact), "10.0.21");
-    Assertions.assertEquals(1, result.size());
+  void testFindArchivedArtifactInfoBestMatchWithVersion() {
+    ArchivedArtifact result = MavenUtils.findArchivedArtifactInfoBestMatchWithVersion(MOCK_RELEASED_VERSION,
+        Collections.emptyList());
+    Assertions.assertNull(result);
+    ArchivedArtifact adobeArchivedArtifactVersion8 = new ArchivedArtifact("10.0.8", MOCK_GROUP_ID,
+        "bpmn-connector");
+    ArchivedArtifact adobeArchivedArtifactVersion9 = new ArchivedArtifact("10.0.9", MOCK_GROUP_ID,
+        "process-mining-connector");
+    List<ArchivedArtifact> archivedArtifacts = new ArrayList<>();
+    archivedArtifacts.add(adobeArchivedArtifactVersion8);
+    archivedArtifacts.add(adobeArchivedArtifactVersion9);
+    result = MavenUtils.findArchivedArtifactInfoBestMatchWithVersion(MOCK_RELEASED_VERSION,
+        archivedArtifacts);
+    Assertions.assertNull(result);
+    result = MavenUtils.findArchivedArtifactInfoBestMatchWithVersion("10.0.7",
+        archivedArtifacts);
+    Assertions.assertEquals(adobeArchivedArtifactVersion8, result);
+    ArchivedArtifact adobeArchivedArtifactVersion10 = new ArchivedArtifact(MOCK_RELEASED_VERSION, MOCK_GROUP_ID,
+        "adobe-sign-connector");
+    archivedArtifacts.add(adobeArchivedArtifactVersion10);
+    result = MavenUtils.findArchivedArtifactInfoBestMatchWithVersion(MOCK_RELEASED_VERSION,
+        archivedArtifacts);
+    Assertions.assertEquals(adobeArchivedArtifactVersion10.getArtifactId(), result.getArtifactId());
   }
 
   @Test
   void testGetVersionsForDesigner() {
-    Mockito.when(productRepository.getReleasedVersionsById(anyString()))
-        .thenReturn(List.of("11.3.0", "11.1.1", "11.1.0", "10.0.2"));
-
-    List<VersionAndUrlModel> result = versionService.getVersionsForDesigner("11.3.0");
-
-    Assertions.assertEquals(result.stream().map(VersionAndUrlModel::getVersion).toList(),
-        List.of("11.3.0", "11.1.1", "11.1.0", "10.0.2"));
-    Assertions.assertTrue(result.get(0).getUrl().endsWith("/api/product-details/11.3.0/11.3.0/json"));
-    Assertions.assertTrue(result.get(1).getUrl().endsWith("/api/product-details/11.3.0/11.1.1/json"));
-    Assertions.assertTrue(result.get(2).getUrl().endsWith("/api/product-details/11.3.0/11.1.0/json"));
-    Assertions.assertTrue(result.get(3).getUrl().endsWith("/api/product-details/11.3.0/10.0.2/json"));
+    MavenArtifactVersion mockMavenArtifactVersion = new MavenArtifactVersion();
+    List<String> mockVersions = List.of("11.3.0-SNAPSHOT", "11.1.1", "11.1.0", "10.0.2");
+    for (String version : mockVersions) {
+      mockMavenArtifactVersion.getProductArtifactsByVersion().put(version, new ArrayList<>());
+    }
+    when(mavenArtifactVersionRepository.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(mockMavenArtifactVersion));
+    List<VersionAndUrlModel> result = versionService.getVersionsForDesigner(MOCK_PRODUCT_ID);
+    Assertions.assertEquals(result.stream().map(VersionAndUrlModel::getVersion).toList(), mockVersions);
+    Assertions.assertTrue(result.get(0).getUrl().endsWith("/api/product-details/bpmn-statistic/11.3.0-SNAPSHOT/json"));
+    Assertions.assertTrue(result.get(1).getUrl().endsWith("/api/product-details/bpmn-statistic/11.1.1/json"));
+    Assertions.assertTrue(result.get(2).getUrl().endsWith("/api/product-details/bpmn-statistic/11.1.0/json"));
+    Assertions.assertTrue(result.get(3).getUrl().endsWith("/api/product-details/bpmn-statistic/10.0.2/json"));
   }
 
   @Test
   void testGetProductJsonContentByIdAndVersion() {
-    ProductJsonContent mockProductJsonContent = new ProductJsonContent();
-    String mockContent = """
-        {
-           "$schema": "https://json-schema.axonivy.com/market/10.0.0/product.json",
-           "installers": [
-             {
-               "id": "maven-import",
-               "data": {
-                 "projects": [
-                   {
-                     "groupId": "com.axonivy.utils.bpmnstatistic",
-                     "artifactId": "bpmn-statistic-demo",
-                     "version": "11.3.1",
-                     "type": "iar"
-                   }
-                 ]
-               }
-             }
-           ]
-         }
-        """;
-    mockProductJsonContent.setProductId("amazon-comprehend");
-    mockProductJsonContent.setVersion("11.3.1");
-    mockProductJsonContent.setName("Amazon Comprehend");
-    mockProductJsonContent.setContent(mockContent);
-
+    ProductJsonContent mockProductJsonContent = getMockProductJsonContent();
+    mockProductJsonContent.setName(MOCK_PRODUCT_NAME);
     Mockito.when(productJsonContentRepository.findByProductIdAndVersion(anyString(), anyString()))
-        .thenReturn(mockProductJsonContent);
-
-    Map<String, Object> result = versionService.getProductJsonContentByIdAndVersion("amazon-comprehend", "11.3.1");
-
-    Assertions.assertEquals("Amazon Comprehend", result.get("name"));
+        .thenReturn(List.of(mockProductJsonContent));
+    Map<String, Object> result = versionService.getProductJsonContentByIdAndTag(MOCK_PRODUCT_ID, MOCK_RELEASED_VERSION);
+    Assertions.assertEquals(MOCK_PRODUCT_NAME, result.get("name"));
   }
 
   @Test
   void testGetProductJsonContentByIdAndVersion_noResult() {
-    Mockito.when(productJsonContentRepository.findByProductIdAndVersion(anyString(), anyString())).thenReturn(null);
-
-    Map<String, Object> result = versionService.getProductJsonContentByIdAndVersion("amazon-comprehend", "11.3.1");
-
+    Mockito.when(productJsonContentRepository.findByProductIdAndVersion(anyString(), anyString())).thenReturn(
+        Collections.emptyList());
+    Map<String, Object> result = versionService.getProductJsonContentByIdAndTag(MOCK_PRODUCT_ID, MOCK_RELEASED_VERSION);
     Assertions.assertEquals(new HashMap<>(), result);
   }
 
   @Test
-  void testgetPersistedVersions() {
-    String mockProductId = "portal";
-    String mockVersion = "10.0.1";
+  void testGetPersistedVersions() {
+    Assertions.assertTrue(CollectionUtils.isEmpty(versionService.getPersistedVersions(MOCK_PRODUCT_ID)));
     Product mocProduct = new Product();
-    mocProduct.setId(mockProductId);
-    mocProduct.setReleasedVersions(List.of(mockVersion));
-    when(productRepository.findById(mockProductId)).thenReturn(Optional.of(mocProduct));
-    Assertions.assertEquals(1, versionService.getPersistedVersions(mockProductId).size());
-    Assertions.assertEquals(mockVersion, versionService.getPersistedVersions(mockProductId).get(0));
+    mocProduct.setId(MOCK_PRODUCT_ID);
+    mocProduct.setReleasedVersions(List.of(MOCK_RELEASED_VERSION));
+    when(productRepository.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(mocProduct));
+    Assertions.assertTrue(ObjectUtils.isNotEmpty(versionService.getPersistedVersions(MOCK_PRODUCT_ID)));
+    Assertions.assertEquals(MOCK_RELEASED_VERSION, versionService.getPersistedVersions(MOCK_PRODUCT_ID).get(0));
+  }
 
+  @Test
+  void testGetAllExistingVersions() {
+    MavenArtifactVersion mockMavenArtifactVersion = new MavenArtifactVersion();
+    Assertions.assertTrue(CollectionUtils.isEmpty(MavenUtils.getAllExistingVersions(mockMavenArtifactVersion, false,
+        StringUtils.EMPTY)));
+    Map<String, List<MavenArtifactModel>> mockArtifactModelsByVersion = new HashMap<>();
+    mockArtifactModelsByVersion.put(MOCK_SNAPSHOT_VERSION, new ArrayList<>());
+    mockMavenArtifactVersion.setProductArtifactsByVersion(mockArtifactModelsByVersion);
+    Assertions.assertTrue(ObjectUtils.isNotEmpty(MavenUtils.getAllExistingVersions(mockMavenArtifactVersion, true,
+        StringUtils.EMPTY)));
+    Assertions.assertTrue(CollectionUtils.isEmpty(MavenUtils.getAllExistingVersions(mockMavenArtifactVersion, false,
+        StringUtils.EMPTY)));
   }
 }
